--- a/test/deployment.yaml
+++ b/test/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: mvcapp
-        image: menesunlu/mvcapp:v${DOCKER_BUILD_NUMBER}
+        image: menesunlu/mvcapp:vlatest
         env:
           - name: PORT
             value: "80"
