--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: mvcapp
-        image: menesunlu/mvcapp:v{BUILD_NUMBER}
+        image: enes.local.registry:5000/mvcapp:vDOCKER_BUILD_NUMBER
         env:
           - name: PORT
             value: "80"
