--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mvcapp
-  namespace: prod
+  namespace: test
 spec:
   selector:
     matchLabels:
